@@ -1,14 +1,15 @@
 Changes for 1.3.6
    Save/restore window size
+   Include projection in frame all/selected command
    Better MD3_PATH handling
       Get MD3_PATH from skins as well as model header
       Allow separate MD3_PATH for each skin
    Corrected capitalization for "Normals Face Out" command
    Replaced lex/yacc code with custom preferences parser
       lex/yacc parser was having parse failures on some archs
+   Updated configuration for newer autoconf (2.61) and automake (1.9)
    Removed several unused modules
    Added script for making source code tags
-   Updated configuration for newer autoconf (2.61) and automake (1.9)
 
 Changes for 1.3.5
    Re-organized menus
